# rbible

./: .gitignore  README.md  index.json  pyproject.toml  rbible.py  setup.py
.github/workflows/: publish.yml
Users/david/.config/nvim/: init.lua
Users/david/.config/nvim/lua/plugins/: rbible.lua
bibles/: LBLA.json
rbible/: __init__.py  bible_data.py  bible_reader.py  formatters.py  rbible.py  reference_detector.py  user_data.py  verse_operations.py
rbible.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
rbible.nvim/: README.md
rbible.nvim/lua/: rbible.lua
rbible.nvim/lua/rbible/: init.lua  keymaps.lua  reference_detector.lua
rbible.nvim/plugin/: rbible.lua
tests/: reference_detector_spec.lua  run_tests.py  test_bible_data.py  test_formatters.py  test_rbible.py  test_reference_detector.py  test_user_data.py  test_verse_operations.py
