[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbible"
version = "1.0.3"
description = "A command-line Bible verse lookup tool"
readme = "README.md"
authors = [
    {name = "Roberto Ram", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Religion",
    "Topic :: Utilities",
]
keywords = ["bible", "verse", "lookup", "cli"]
dependencies = [
    "argparse",
]
requires-python = ">=3.6"

[project.urls]
"Homepage" = "https://github.com/robertoram/rbible"
"Bug Tracker" = "https://github.com/robertoram/rbible/issues"

[project.scripts]
rbible = "rbible.rbible:main"

# Add this section to explicitly include all package files
[tool.setuptools]
packages = ["rbible"]